--- a/PizzaDaMamma.Orders/PizzaDaMamma.Orders.csproj
+++ b/PizzaDaMamma.Orders/PizzaDaMamma.Orders.csproj
@@ -8,4 +8,8 @@
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
